remove bottom margin for some last elements to avoid cumulative spacing

--- a/bits/styles/_typography.scss
+++ b/bits/styles/_typography.scss
@@ -260,3 +260,8 @@ p.continue-reading {
 .fn-backref, .footnote p {
   font-size: .8rem;
 }
+
+
+section:last-child, p:last-child {
+  margin-bottom: 0;
+}
